Update text for sharing and rating instructions

--- a/index.html
+++ b/index.html
@@ -631,13 +631,13 @@
                 <div class="usage-step">
                     <div class="step-number">3</div>
                     <div class="step-text">
-                        <strong>Teilen:</strong> Teile den Link zu dieser Seite mit deinen Kommilitonen. Alle können gemeinsam Kurse hinzufügen und sehen die gleichen Daten (wenn auf einem Server gehostet).
+                        <strong>Teilen:</strong> Teile den Link zu dieser Seite mit deinen Kommilitonen. Alle können gemeinsam Kurse hinzufügen und sehen die gleichen Daten.
                     </div>
                 </div>
                 <div class="usage-step">
                     <div class="step-number">4</div>
                     <div class="step-text">
-                        <strong>Bewerten & Tipps teilen:</strong> Aktualisiere nach Kursabschluss deine Bewertung und teile hilfreiche Insider-Tipps für kommende Jahrgänge.
+                        <strong>Bewerten & Tipps teilen:</strong> Aktualisiere nach Kursabschluss deine Bewertung und teile hilfreiche Insider-Tipps für deine Kommilitonen.
                     </div>
                 </div>
             </div>
