Update Supabase credentials in index.html

--- a/index.html
+++ b/index.html
@@ -788,8 +788,8 @@
 
     <script>
         // ⚠️ WICHTIG: Ersetze diese Werte mit deinen Supabase Credentials
-        const SUPABASE_URL = 'YOUR_SUPABASE_URL';  // z.B. 'https://abcdefghijk.supabase.co'
-        const SUPABASE_KEY = 'YOUR_SUPABASE_ANON_KEY';  // Dein anon public key
+        const SUPABASE_URL = 'https://jwwfrbodwalnygcawhmv.supabase.co';  // z.B. 'https://abcdefghijk.supabase.co'
+        const SUPABASE_KEY = 'sb_publishable_eYi4vhmS-EGg9iEZAxc8Gw_jttyVG_F';  // Dein anon public key
 
         // Supabase Client initialisieren
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
