Update course name description in index.html

--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                     <h4>Spalten-Guide</h4>
                     <div class="guide-item">
                         <strong>Kursname</strong>
-                        <span>Vollständiger Name des Kurses</span>
+                        <span>Vollständiger Name des Kurses (Wie in Moodle)</span>
                     </div>
                     <div class="guide-item">
                         <strong>Fachbereich</strong>
