Update placeholder text for courseFachbereich input

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
                 <div class="form-grid">
                     <div class="form-group">
                         <label class="form-label">Fachbereich *</label>
-                        <input type="text" class="form-input" id="courseFachbereich" required placeholder="z.B. Informatik">
+                        <input type="text" class="form-input" id="courseFachbereich" required placeholder="z.B. Innovation & Entrepreneurship">
                     </div>
                     <div class="form-group">
                         <label class="form-label">ECTS *</label>
