Remove subtitle from header in index.html
Removed subtitle text from the header.

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
     <div class="header">
         <div class="header-content">
             <h1>📚 TUM Kursübersicht</h1>
-            <p class="subtitle">Gemeinsam erstellt von Studierenden der Technischen Universität München</p>
+            <p class="subtitle"></p>
         </div>
     </div>
 
