--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                     </div>
                     <div class="guide-item">
                         <strong>Fachbereich</strong>
-                        <span>z.B. Informatik, Mathematik</span>
+                        <span>z.B. Innovation & Entrepreneurship</span>
                     </div>
                     <div class="guide-item">
                         <strong>ECTS</strong>
