--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             --tum-gray-light: #dad7cb;
             --tum-white: #ffffff;
             --tum-black: #000000;
-            --bg-light: #f8f9fa;
+            --bg-light: #002C53;
             --border-light: #e0e0e0;
             --text-primary: #333333;
             --text-secondary: #666666;
