--- a/index.html
+++ b/index.html
@@ -961,10 +961,17 @@
 
         <!-- Controls -->
         <div class="controls">
+           
             <div class="search-bar">
-                <span class="search-icon">🔍</span>
-                <input type="text" id="searchInput" placeholder="Kurse durchsuchen...">
+            <div class="search-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="11" cy="11" r="8"></circle>
+                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                </svg>
             </div>
+            <input type="text" id="searchInput" placeholder="Kurse durchsuchen...">
+            </div>
+           
             <div class="filter-group">
                 <button class="filter-btn active" onclick="filterDifficulty('alle')" data-filter="alle">Alle</button>
                 <button class="filter-btn" onclick="filterDifficulty('leicht')" data-filter="leicht">Leicht</button>
