--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TUM Kursübersicht</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22  viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📚</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22   viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📚</text></svg>">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         * {
@@ -84,7 +84,7 @@
             height: 100%;
             background: linear-gradient(90deg, transparent, rgba(255,255,255,0.15), transparent);
             transform: skewX(-25deg);
-            animation: shimmer 25s infinite;
+            animation: shimmer 6s infinite;
             will-change: transform;
         }
 
@@ -254,17 +254,7 @@
             background-clip: text;
             margin-top: 15px;
         }
-            .search-icon {
-                position: absolute;
-                left: 15px;
-                top: 50%;
-                transform: translateY(-50%);
-                color: var(--text-muted); /* Nutzt deine definierte graue Farbe */
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                pointer-events: none; /* Klicks gehen durch das Icon direkt ins Input-Feld */
-        }
+
         /* Stats - Faster hover */
         .stats-grid {
             display: grid;
@@ -359,13 +349,29 @@
             color: var(--text-muted);
         }
 
+        /* Clean SVG Search Icon */
         .search-icon {
             position: absolute;
             left: 15px;
             top: 50%;
             transform: translateY(-50%);
             color: var(--text-muted);
-            font-size: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            pointer-events: none;
+            width: 18px;
+            height: 18px;
+        }
+
+        .search-icon svg {
+            width: 100%;
+            height: 100%;
+            stroke: currentColor;
+            stroke-width: 2;
+            fill: none;
+            stroke-linecap: round;
+            stroke-linejoin: round;
         }
 
         .filter-group {
@@ -403,9 +409,9 @@
             box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
         }
 
-        /* Rating filter dropdown */
+        /* Rating filter dropdown - FIXED */
         .filter-select {
-            padding: 10px 15px;
+            padding: 10px 35px 10px 15px;
             background: var(--glass-bg);
             border: 1px solid var(--glass-border);
             border-radius: 8px;
@@ -415,7 +421,14 @@
             transition: all 0.2s;
             backdrop-filter: blur(10px);
             font-weight: 500;
-            min-width: 140px;
+            min-width: 160px;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%2394a3b8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-position: right 12px center;
+            background-size: 16px;
         }
 
         .filter-select:focus {
@@ -424,9 +437,16 @@
             color: var(--text-primary);
         }
 
+        /* FIXED: Dropdown options styling */
         .filter-select option {
             background: var(--primary-dark);
             color: var(--text-primary);
+            padding: 10px;
+        }
+
+        /* Alternative for better browser support */
+        select.filter-select {
+            background-color: var(--primary-dark);
         }
 
         .btn-primary {
@@ -698,6 +718,12 @@
             color: var(--text-primary);
             transition: all 0.2s;
             backdrop-filter: blur(10px);
+        }
+
+        /* FIXED: Modal dropdown options */
+        .form-select option {
+            background: var(--primary-dark);
+            color: var(--text-primary);
         }
 
         .form-input:focus,
@@ -973,13 +999,13 @@
         <div class="controls">
            
             <div class="search-bar">
-            <div class="search-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-                    <circle cx="11" cy="11" r="8"></circle>
-                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                </svg>
-            </div>
-            <input type="text" id="searchInput" placeholder="Kurse durchsuchen...">
+                <div class="search-icon">
+                    <svg viewBox="0 0 24 24">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                    </svg>
+                </div>
+                <input type="text" id="searchInput" placeholder="Kurse durchsuchen...">
             </div>
            
             <div class="filter-group">
