--- a/index.html
+++ b/index.html
@@ -351,17 +351,16 @@
 
         /* Clean SVG Search Icon */
         .search-icon {
-            position: absolute;
-            left: 15px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: var(--text-muted);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            pointer-events: none;
-            width: 18px;
-            height: 18px;
+        position: absolute;
+        left: 15px;
+        top: 50%;
+        transform: translateY(-50%);
+        color: var(--text-muted);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        pointer-events: none;
+        z-index: 10;
         }
 
         .search-icon svg {
@@ -998,15 +997,15 @@
         <!-- Controls -->
         <div class="controls">
            
-            <div class="search-bar">
-                <div class="search-icon">
-                    <svg viewBox="0 0 24 24">
-                        <circle cx="11" cy="11" r="8"></circle>
-                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                    </svg>
-                </div>
-                <input type="text" id="searchInput" placeholder="Kurse durchsuchen...">
+                 <div class="search-bar">
+            <div class="search-icon">
+                <svg viewBox="0 0 24 24" width="18" height="18" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <circle cx="11" cy="11" r="8"></circle>
+                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                </svg>
             </div>
+            <input type="text" id="searchInput" placeholder="Kurse durchsuchen...">
+        </div>
            
             <div class="filter-group">
                 <button class="filter-btn active" onclick="filterDifficulty('alle')" data-filter="alle">Alle</button>
