--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@
 
                 <div class="form-grid">
                     <div class="form-group">
-                        <label class="form-label">Semester *</label>
+                        <label class="form-label">Semester wo Kurs angeboten wird *</label>
                         <select class="form-select" id="courseSemester" required>
                             <option value="">Wählen...</option>
                             <option value="WS">WS (Wintersemester)</option>
