--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
                     </div>
                     <div class="guide-item">
                         <strong>Semester</strong>
-                        <span>WS/SS/WS+SS</span>
+                        <span>Angeboten im WS/SS/WS+SS</span>
                     </div>
                 </div>
                 <div class="guide-column">
